DemoMyApp/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Age_Range__c</fullName>
        <inlineHelpText>Age Range from GMASS list</inlineHelpText>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>18-22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLCC__Exclude_from_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <inlineHelpText>A sub type related to the overal type of campaign.</inlineHelpText>
        <label>Campaign Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Deadline Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Invitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google AdWords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet and Greet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Paid Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal Greeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infosession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round table meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience Hult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - International Trade Fair for Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studyrama International Education &amp; Career Fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Country related to the region for campaign segmentation</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_Objective__c</fullName>
        <inlineHelpText>Degree objective for determining MBA from EMBA</inlineHelpText>
        <label>Degree Objective</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMAT_Score__c</fullName>
        <inlineHelpText>Score or range from the GMASS list of the score.</inlineHelpText>
        <label>GMAT Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Expiration_Date__c</fullName>
        <inlineHelpText>The date the rental list must be removed from the database (minus the converted applicants that have created an application on the web site).</inlineHelpText>
        <label>List Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <inlineHelpText>Name of the List Purchased</inlineHelpText>
        <label>List Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <inlineHelpText>Marketing source name will be associated to a lead</inlineHelpText>
        <label>Marketing Source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access &gt; MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccessMBAprescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIESEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>baidu.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cappex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChaseDream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBlast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBlast Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EconomistOnlineFair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFBlast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF Blasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-fellows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience Hult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fb?utm_source=Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GETEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMASS-EFAMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT_Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hult Brochure request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iChat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Event Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <inlineHelpText>This is related to Sub Type for Fairs</inlineHelpText>
        <label>Organizer</label>
        <picklist>
            <controllingField>Campaign_Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>QS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a2 International Education Fairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central European Study Abroad Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-fellows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;Etudiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International School of London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastermap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Recruitment Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targetcourses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasus school of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgian American University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIMEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Council</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIBA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TOEFL_Score__c</fullName>
        <label>TOEFL Score</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Months__c</fullName>
        <label>Work Experience (Months)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Years__c</fullName>
        <inlineHelpText>Number of years of work experience to determine the correct program for the contact/applicant.</inlineHelpText>
        <label>Work Experience (Years)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Load__c</fullName>
        <label>Work Load</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive MBA Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ASIA_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Asia</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Events</value>
        </filters>
        <label>ASIA Events</label>
        <sharedTo>
            <groups>Asia Marketing Users</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Marketing_Source__c</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Age_Range__c</columns>
        <columns>Degree_Objective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Marketing_Source__c</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Age_Range__c</columns>
        <columns>Degree_Objective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Asia_EMBA_campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>includes</operation>
            <value>EMBA</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia</value>
        </filters>
        <label>2012 EMBA Asia - Campaigns</label>
        <sharedTo>
            <roles>*Asia Product Head - EMBA</roles>
            <roles>*Asia Recruiter - EMBA</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Asia_Emails</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Asia</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Asia Emails</label>
        <sharedTo>
            <groups>Asia Marketing Users</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Asia_Marketing</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Asia</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Events,Email</value>
        </filters>
        <label>Asia Marketing</label>
        <sharedTo>
            <groups>Asia Marketing Users</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Europe_EMBA_campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>includes</operation>
            <value>EMBA</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>EU</value>
        </filters>
        <label>2012 EMBA Europe - Campaigns</label>
        <sharedTo>
            <roles>*Europe Product Head - EMBA</roles>
            <roles>*Europe Product Head- MBA</roles>
            <roles>*Europe Recruiter - EMBA</roles>
            <roles>*Europe Recruiter MBA</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hult_Europe_Marketing_All_campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EU</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Events,Other</value>
        </filters>
        <label>Hult Europe Marketing_All campaigns</label>
    </listViews>
    <listViews>
        <fullName>LA_Campaigns_All</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>NA LA</value>
        </filters>
        <label>LA Campaigns_All</label>
        <sharedTo>
            <groups>LA MA Recruiters</groups>
            <groups>LA MBA Recruiters</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Events_View1</fullName>
        <booleanFilter>(1 and 2) or (3 and 4)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Events</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>na la</value>
        </filters>
        <label>LA Events View</label>
        <sharedTo>
            <groups>LA MA Recruiters</groups>
            <groups>LA MBA Recruiters</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MEA_EMBA_campaigns2</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>includes</operation>
            <value>EMBA</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>2012 EMBA MEA - Campaigns</label>
        <sharedTo>
            <roles>*MEA Product Head - EMBA</roles>
            <roles>*MEA Recruiter - EMBA</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>NA_Campaigns_All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <label>NA Campaigns_All</label>
        <sharedTo>
            <groups>NA MA Recruiters</groups>
            <groups>NA MBA East Recruiters</groups>
            <groups>NA MBA West Recruiters</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NA_Events_View</fullName>
        <booleanFilter>(1 and 2) or (3 and 4)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Events</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>na la</value>
        </filters>
        <label>NA Events View</label>
        <sharedTo>
            <groups>NA MA Recruiters</groups>
            <groups>NA MBA East Recruiters</groups>
            <groups>NA MBA West Recruiters</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NA_LA_Campaigns_All</fullName>
        <booleanFilter>1 and 2 and 3</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>NA,LA</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>excludes</operation>
            <value>Asia,EU,MEA</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>NA LA Campaigns_All</label>
        <sharedTo>
            <groups>LA MA Recruiters</groups>
            <groups>LA MBA Recruiters</groups>
            <groups>NA MA Recruiters</groups>
            <groups>NA MBA East Recruiters</groups>
            <groups>NA MBA West Recruiters</groups>
        </sharedTo>
    </listViews>
</CustomObject>